--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ h2{
 .foto1{
     height: 450px;
     width: 600px;
+    width: 45%;
+    max-width: 600px;
 }
 
 .grifado{
@@ -47,6 +49,8 @@ h2{
 .foto2{
     width: 40px;
     height: 30px;
+    width: 45%;
+    max-width: 600px;
 }
 
 a{
